# ask-volk

./: .gitattributes  README.md  env-py311.yaml  env.yaml  pyproject.toml
.trunk/: trunk.yaml
ask_volk/: downloader.py  trainer.py
ask_volk/conf/: config.yaml
ask_volk/conf/data/: baseline.yaml
ask_volk/conf/data/socioeconomic/: bfs.yaml
ask_volk/conf/data/votes/: cv.yaml  nv+cv.yaml  nv+sv.yaml  nv.yaml
ask_volk/conf/harmonization/: default.yaml
ask_volk/conf/model/: default.yaml
ask_volk/conf/text_model/: external.yaml
ask_volk/conf/vote_model/: hierarchical.yaml
ask_volk/config/: base.py  data.py  model.py
ask_volk/data/: _loader.py  combiner.py
ask_volk/data/loader/: base.py  statlas.py  stattab.py  swissdd.py
ask_volk/utils/: deduplicator.py  filter.py  hierarchy_harmonizer.py  municipality_harmonizer.py
data/: README.md
data/processed/: summary_topics.csv
data/raw/: eCH0071_240301.xml
data/raw/leaflets/: leaflet_contents.json  leaflets_merged.csv
notebooks/: baseline.ipynb  eval.ipynb  hierarchical-exploration.ipynb  model-evaluation.ipynb  model-training-ensemble.ipynb  model-training-with-controls.ipynb  model-training.ipynb  pyaxis-exploration.ipynb  swiss-votes-eda.ipynb  topic_analysis.ipynb  unknown_municipalities_varying_preprocessing.ipynb  unknown_municipalities_varying_test_size.ipynb
src/: utils.py
src/leaflets/: leaflets_json_to_csv.py
src/legal_texts/: download_parse_legal_texts.py
src/robot_judge_project/: README.md  requirements.txt
src/robot_judge_project/code/: download_data.py  main.py  outfile.json
src/robot_judge_project/code/data/json/: leaflet_contents.json  metadata.json
src/robot_judge_project/code/utils/: machine_learning.py  post_processing.py  pre_processing.py  scraping.py  utils.py  visualization.py
src/topic_modeling/: topic_modeling.py
